Fixed z-index issue

--- a/styles.css
+++ b/styles.css
@@ -20,4 +20,5 @@
   border-radius: 4px;
   border: 1px solid rgba(60, 60, 60, .83);
   line-height: 3;
+  z-index: 1;
 }
